--- a/extension/package.json
+++ b/extension/package.json
@@ -1,20 +1,12 @@
 {
   "name": "spotify_scrapping",
   "version": "1.0.0",
-  "description": "Chrome extension to scrape Spotify data",
-  "main": "dist/background.js",
+  "description": "Chrome extension to scrape Spotify playlist data",
+  "main": "src/background/background.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack --watch"
+    "start": "echo 'No build step required'"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.283",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
-    "ts-loader": "^9.0.0",
-    "typescript": "^5.0.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^5.0.0"
+    "@types/chrome": "^0.0.283"
   }
 }
