--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,19 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  minio:
+      image: minio/minio
+      container_name: minio
+      command: server /data --console-address ":9001"
+      ports:
+        - "9000:9000"
+        - "9001:9001"
+      environment:
+        - MINIO_ROOT_USER=admin
+        - MINIO_ROOT_PASSWORD=admin123
+      volumes:
+        - minio-data:/data
+
 volumes:
   mongo-data:
+  minio-data:
